--- a/src/main.scss
+++ b/src/main.scss
@@ -6,3 +6,22 @@
   box-sizing: border-box;
   font-family: 'Ubuntu', sans-serif;
 }
+
+/* XL devices (default) */
+
+/* ...code... */
+
+/* Large devices */
+@media only screen and (max-width: 1199.98px) {
+  /* ...code... */
+}
+
+/* Medium devices */
+@media only screen and (max-width: 991.98px) {
+  /* ...code... */
+}
+
+/* Small devices */
+@media only screen and (max-width: 767.98px) {
+  /* ...code... */
+}
