--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,8 @@ $purple: #d2ceff;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 55px;
+  padding: 20px 0;
+  margin-bottom: 35px;
 }
 
 .nav-logo {
@@ -55,7 +56,7 @@ $purple: #d2ceff;
 }
 
 .category {
-  margin: 25px auto;
+  margin: 35px auto;
   display: flex;
   align-items: center;
 }
@@ -104,7 +105,8 @@ $purple: #d2ceff;
 /* Small devices */
 @media only screen and (max-width: 767.98px) {
   .navbar {
-    margin-bottom: 25px;
+    margin-bottom: 5px;
+    padding: 0;
   }
 
   .categories-container {
