--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ $purple: #d2ceff;
 
 .app-container {
   width: 92%;
-  max-width: 1100px;
+  max-width: 1050px;
   margin: 20px auto;
   height: 100vh;
 }
@@ -28,7 +28,7 @@ $purple: #d2ceff;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 20px 0;
+  padding: 10px 0 20px;
   margin-bottom: 35px;
 }
 
@@ -50,22 +50,19 @@ $purple: #d2ceff;
   height: 32px;
 }
 
+.main-container {
+  display: flex;
+}
+
 .categories-container {
   width: 200px;
-  height: 100px;
+  height: auto;
 }
 
 .category {
-  margin: 37px auto;
+  margin-bottom: 37px;
   display: flex;
   align-items: center;
-}
-
-.dot {
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-  display: inline-block;
 }
 
 .category-title {
@@ -74,6 +71,13 @@ $purple: #d2ceff;
   font-size: 15px;
   font-weight: 500;
   cursor: pointer;
+}
+
+.dot {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  display: inline-block;
 }
 
 .dot1 {
@@ -90,6 +94,12 @@ $purple: #d2ceff;
 
 .dot4 {
   background-color: $green;
+}
+
+.todos-container {
+  width: 100%;
+  height: 100px;
+  background-color: blue;
 }
 
 /* Large devices */
@@ -109,11 +119,21 @@ $purple: #d2ceff;
     padding: 0;
   }
 
+  .main-container {
+    flex-direction: column;
+  }
+
   .categories-container {
     width: 100%;
     overflow-x: auto;
     height: auto;
     display: flex;
+  }
+
+  .category {
+    margin: 37px auto;
+    display: flex;
+    align-items: center;
   }
 
   .category-title {
