--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,9 @@ $purple: #d2ceff;
 }
 
 .categories-container {
-  width: 200px;
+  min-width: 200px;
+  max-width: 250px;
+  width: auto;
   height: auto;
 }
 
@@ -98,7 +100,7 @@ $purple: #d2ceff;
 
 .todos-container {
   width: 100%;
-  height: 100px;
+  height: 900px;
   background-color: blue;
 }
 
@@ -128,6 +130,7 @@ $purple: #d2ceff;
     overflow-x: auto;
     height: auto;
     display: flex;
+    max-width: none;
   }
 
   .category {
