--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,6 +82,10 @@ $purple: #d2ceff;
   display: inline-block;
 }
 
+.dot-all {
+  background-color: $black;
+}
+
 .dot1 {
   background-color: $purple;
 }
@@ -101,7 +105,6 @@ $purple: #d2ceff;
 .todos-container {
   width: 100%;
   height: 900px;
-  background-color: blue;
 }
 
 /* Large devices */
@@ -126,7 +129,7 @@ $purple: #d2ceff;
   }
 
   .categories-container {
-    width: 100%;
+    min-width: 100%;
     overflow-x: auto;
     height: auto;
     display: flex;
