--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 $black: #69665c;
 $grey: #b2afa1;
-$yellow: #fff9de;
+$yellow: #fdf9de;
 $white: #fff;
 $blue: #d1e5f7;
 $green: #daf2d6;
@@ -104,7 +104,17 @@ $purple: #d2ceff;
 
 .todos-container {
   width: 100%;
-  height: 900px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto;
+}
+
+.todo {
+  background-color: $yellow;
+  height: 200px;
+  width: 95%;
+  margin: 0 auto 20px;
+  border-radius: 10px;
 }
 
 /* Large devices */
@@ -114,7 +124,9 @@ $purple: #d2ceff;
 
 /* Medium devices */
 @media only screen and (max-width: 991.98px) {
-  /* ...code... */
+  .todos-container {
+    grid-template-columns: 100%;
+  }
 }
 
 /* Small devices */
