--- a/src/styles.scss
+++ b/src/styles.scss
@@ -145,8 +145,12 @@ $purple: #d2ceff;
 }
 
 .todo-paragraph {
-  margin: 15px 0;
+  margin: 15px 0 20px;
   color: $black;
+}
+
+.todo-footer {
+  width: 100%;
 }
 
 /* Large devices */
