Add checkbox to todo

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -158,6 +158,9 @@ $purple: #d2ceff;
 
 .todo-footer {
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Large devices */
