Add done text next to checkbox

--- a/src/scss/checkbox.scss
+++ b/src/scss/checkbox.scss
@@ -1,11 +1,12 @@
 .control {
   display: block;
   position: relative;
-  padding-left: 30px;
+  padding-left: 25px;
   margin-bottom: 5px;
   padding-top: 3px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 13px;
+  color: #69665c;
 }
 
 .control input {
