--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -246,6 +246,36 @@ $purple: #d2ceff;
     align-items: center;
   }
 
+  .options {
+    width: 92vw;
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+    display: flex;
+    justify-content: space-around;
+    background-color: $white;
+  }
+
+  .option {
+    margin: 0;
+    display: flex;
+    align-items: center;
+  }
+
+  .option:nth-last-of-type(2) {
+    margin-top: 0;
+  }
+
+  .options-btn {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    border: none;
+    background: none;
+    padding: 25px 0;
+  }
+
   .arrow-btn {
     display: flex;
     align-items: center;
