Change style of fade transition

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,7 +7,7 @@ $blue: #d1e5f7;
 $green: #daf2d6;
 $red: #ffcece;
 $purple: #d2ceff;
-$fade: all 0.25s ease-in-out;
+$fade: all 0.25s ease-in;
 
 * {
   margin: 0;
