--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -257,9 +257,8 @@ $fade: all 0.25s ease-in;
 
 .add-new-todo-box {
   width: 100%;
-  height: 100%;
+  height: auto;
   max-width: 650px;
-  max-height: 400px;
   background-color: $white;
   border-radius: 15px;
   z-index: 20;
@@ -321,6 +320,18 @@ $fade: all 0.25s ease-in;
 
 #add-todo-description {
   height: 100px;
+}
+
+#add-todo-category {
+  border: none;
+  background-color: $light-grey;
+  padding: 12px;
+  border-radius: 5px;
+  color: $black;
+
+  option:first-child {
+    display: none;
+  }
 }
 
 /* Large devices */
