--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -443,11 +443,17 @@ $fade: all 0.25s ease-in;
     margin-right: 10px;
   }
 
+  .add-new-todo-box {
+    min-height: 100%;
+    min-width: 100%;
+    margin: 0;
+    border-radius: 0;
+    padding: 10px 15px;
+  }
+
   .add-todo-categories {
-    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
-    margin: 10px 0;
   }
 }
