--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -340,6 +340,72 @@ $fade: all 0.25s ease-in;
   background-color: $light-grey;
 }
 
+.edit-existing-todo-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $black-see-through;
+  opacity: 0;
+  z-index: 30;
+  pointer-events: none;
+  overflow-y: scroll;
+  transition: $fade;
+}
+
+.show-edit-existing-todo {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.edit-existing-todo-box {
+  width: 100%;
+  height: auto;
+  max-width: 650px;
+  background-color: $white;
+  border-radius: 15px;
+  z-index: 20;
+  border: 1px solid $grey;
+  box-shadow: 0 5px 15px -7px $black;
+  margin: 90px auto 90px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 50px;
+}
+
+.edit-existing-todo-buttons-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.edit-existing-todo-buttons {
+  height: 40px;
+  width: 115px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.cancel-edit-existing-todo-button {
+  text-align: start;
+  background: none;
+  color: $black;
+  font-size: 15px;
+}
+
+.add-edit-existing-todo-button {
+  background-color: $black;
+  font-weight: bold;
+  font-size: 14px;
+  color: $white;
+}
+
+#edit-todo-description {
+  height: 100px;
+}
+
 /* Large devices */
 @media only screen and (max-width: 1199.98px) {
   /* ...code... */
@@ -455,5 +521,13 @@ $fade: all 0.25s ease-in;
     flex-direction: column;
     justify-content: flex-start;
     width: 100%;
+  }
+
+  .edit-existing-todo-box {
+    min-height: 100%;
+    min-width: 100%;
+    margin: 0;
+    border-radius: 0;
+    padding: 10px 15px;
   }
 }
