--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -406,6 +406,68 @@ $fade: all 0.25s ease-in;
   height: 100px;
 }
 
+.delete-todo-popup-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $black-see-through;
+  opacity: 0;
+  z-index: 20;
+  pointer-events: none;
+  overflow-y: scroll;
+  transition: $fade;
+}
+
+.show-delete-todo-popup {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.delete-todo-popup-box {
+  width: 100%;
+  height: auto;
+  max-width: 450px;
+  background-color: $white;
+  border-radius: 15px;
+  z-index: 20;
+  border: 1px solid $grey;
+  box-shadow: 0 5px 15px -7px $black;
+  margin: 90px auto 90px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 50px;
+}
+
+.delete-todo-buttons-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.delete-todo-buttons {
+  height: 40px;
+  width: 115px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.cancel-delete-todo-button {
+  text-align: start;
+  background: none;
+  color: $black;
+  font-size: 15px;
+}
+
+.delete-todo-button {
+  background-color: $black;
+  font-weight: bold;
+  font-size: 14px;
+  color: $white;
+}
+
 /* Large devices */
 @media only screen and (max-width: 1199.98px) {
   /* ...code... */
