--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -437,7 +437,7 @@ $fade: all 0.25s ease-in;
   margin: 90px auto 90px;
   display: flex;
   flex-direction: column;
-  padding: 40px 50px;
+  padding: 30px 50px 20px;
 }
 
 .delete-todo-buttons-container {
