Add more descriptive text to delete popup

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -475,6 +475,7 @@ $fade: all 0.25s ease-in;
   align-items: center;
   justify-content: center;
   padding: 30px 0 10px;
+  text-align: center;
 }
 
 /* Large devices */
