--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -478,6 +478,78 @@ $fade: all 0.25s ease-in;
   text-align: center;
 }
 
+.delete-all-todo-popup-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $black-see-through;
+  opacity: 0;
+  z-index: 20;
+  pointer-events: none;
+  overflow-y: scroll;
+  transition: $fade;
+}
+
+.show-delete-all-todo-popup {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.delete-all-todo-popup-box {
+  width: 100%;
+  height: auto;
+  max-width: 450px;
+  background-color: $white;
+  border-radius: 15px;
+  z-index: 20;
+  border: 1px solid $grey;
+  box-shadow: 0 5px 15px -7px $black;
+  margin: 90px auto 90px;
+  display: flex;
+  flex-direction: column;
+  padding: 30px 50px 20px;
+}
+
+.delete-all-todo-buttons-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.delete-all-todo-buttons {
+  height: 40px;
+  width: 115px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.cancel-delete-all-todo-button {
+  text-align: start;
+  background: none;
+  color: $black;
+  font-size: 15px;
+}
+
+.delete-all-todo-button {
+  background-color: $black;
+  font-weight: bold;
+  font-size: 14px;
+  color: $white;
+}
+
+.delete-all-todo-text {
+  color: $black;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 0 10px;
+  text-align: center;
+}
+
 /* Large devices */
 @media only screen and (max-width: 1199.98px) {
   /* ...code... */
@@ -604,6 +676,10 @@ $fade: all 0.25s ease-in;
   }
 
   .delete-todo-popup-box {
+    padding: 10px 15px;
+  }
+
+  .delete-all-todo-popup-box {
     padding: 10px 15px;
   }
 }
