--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -627,6 +627,68 @@ $fade: all 0.25s ease-in;
   align-items: center;
 }
 
+.add-category-popup-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $black-see-through;
+  opacity: 0;
+  z-index: 20;
+  pointer-events: none;
+  overflow-y: scroll;
+  transition: $fade;
+}
+
+.show-add-category-popup {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.add-category-popup-box {
+  width: 100%;
+  height: auto;
+  max-width: 450px;
+  background-color: $white;
+  border-radius: 15px;
+  z-index: 20;
+  border: 1px solid $grey;
+  box-shadow: 0 5px 15px -7px $black;
+  margin: 90px auto 90px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 50px 20px;
+}
+
+.add-category-buttons-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-category-buttons {
+  height: 40px;
+  width: 115px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.cancel-add-category-button {
+  text-align: start;
+  background: none;
+  color: $black;
+  font-size: 15px;
+}
+
+.add-add-category-button {
+  background-color: $black;
+  font-weight: bold;
+  font-size: 14px;
+  color: $white;
+}
+
 /* Large devices */
 @media only screen and (max-width: 1199.98px) {
   /* ...code... */
@@ -766,5 +828,9 @@ $fade: all 0.25s ease-in;
     margin: 0;
     border-radius: 0;
     padding: 10px 15px;
+  }
+
+  .add-category-popup-box {
+    padding: 25px 15px;
   }
 }
