--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -617,7 +617,7 @@ $fade: all 0.25s ease-in;
 .edit-categories-title {
   font-weight: bold;
   color: $black;
-  font-size: 24px;
+  font-size: 18px;
   margin: 22px 0;
 }
 
@@ -721,7 +721,7 @@ $fade: all 0.25s ease-in;
     top: 50px;
     background-color: $white;
     z-index: 11;
-    padding: 0 30px;
+    padding: 0 34px;
   }
 
   .category {
@@ -768,23 +768,23 @@ $fade: all 0.25s ease-in;
     background: $white;
     position: fixed;
     border-radius: 5px;
-    padding: 5px;
+    padding: 8px;
   }
 
   .left-arrow-btn {
-    top: 68px;
-    left: 7px;
-    transform: rotate(180deg);
+    top: 69px;
+    left: 6px;
+    transform: scaleX(-1);
   }
 
   .right-arrow-btn {
-    top: 68px;
-    right: 7px;
+    top: 69px;
+    right: 6px;
   }
 
   .arrow {
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 30px;
     fill: $black;
   }
 
