--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -161,7 +161,7 @@ $fade: all 0.25s ease-in;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
-  height: 0;
+  height: auto;
 }
 
 .todo {
