--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -626,6 +626,7 @@ $fade: all 0.25s ease-in;
   padding-bottom: 13px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid $grey;
   width: 100%;
 }
@@ -695,6 +696,20 @@ $fade: all 0.25s ease-in;
   font-weight: bold;
   font-size: 14px;
   color: $white;
+}
+
+.delete-category-btn {
+  width: 28px;
+  height: 28px;
+  background: none;
+  border: none;
+  margin: 0 7px 0 0;
+  cursor: pointer;
+}
+
+.delete-category-svg {
+  transform: scale(0.7);
+  fill: $black;
 }
 
 /* Large devices */
