--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -168,15 +168,12 @@ $fade: all 0.25s ease-in;
 
 .todos-container {
   width: 100%;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: auto;
   height: auto;
 }
 
 .todo {
   background-color: $yellow;
-  width: 95%;
+  width: 47%;
   margin: 0 auto 20px;
   border-radius: 3px;
   height: auto;
@@ -801,8 +798,8 @@ $fade: all 0.25s ease-in;
 
 /* Medium devices */
 @media only screen and (max-width: 991.98px) {
-  .todos-container {
-    grid-template-columns: 100%;
+  .todo {
+    width: 100%;
   }
 }
 
@@ -872,6 +869,10 @@ $fade: all 0.25s ease-in;
     border: none;
     background: none;
     padding: 20px 0;
+  }
+
+  .todo {
+    width: 100%;
   }
 
   .category-title {
