Create display categories functionality

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -600,6 +600,10 @@ $fade: all 0.25s ease-in;
   padding: 40px 50px;
 }
 
+.edit-categories-btns-container {
+  width: 100%;
+}
+
 .edit-categories-buttons-container {
   width: 100%;
   display: flex;
