Update text decoration line to be same color as text

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -256,6 +256,7 @@ $fade: all 0.25s ease-in;
 
 .done {
   text-decoration: line-through;
+  text-decoration-color: $black;
 }
 
 .add-new-todo-container {
