--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -343,7 +343,7 @@ $fade: all 0.25s ease-in;
 .add-todo-categories {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
 }
 
@@ -840,6 +840,8 @@ $fade: all 0.25s ease-in;
       display: none;
     }
   }
+
+  .flickity-prev-next-button:disabled { display: none; }
 
   .category {
     margin: 10px 0;
