--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -596,7 +596,7 @@ $fade: all 0.25s ease-in;
   margin: 90px auto 90px;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   justify-content: flex-start;
   padding: 40px 50px;
 }
