--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,6 +20,47 @@ $fade: all 0.25s ease-in;
 
 /* XL devices (default) */
 
+.loading-container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: $white;
+  transition: $fade;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loading-screen-text {
+  color: $black;
+  font-size: 48px;
+}
+
+.focus-in-contract {
+  animation: focus-in-contract 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2 alternate both;
+}
+
+@keyframes focus-in-contract {
+  0% {
+    letter-spacing: 1em;
+    filter: blur(12px);
+    opacity: 0;
+  }
+
+  100% {
+    filter: blur(0);
+    opacity: 1;
+  }
+}
+
+.hide-loading-screen {
+  opacity: 0;
+  pointer-events: none;
+}
+
 .app-container {
   width: 92%;
   max-width: 1150px;
