--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -62,6 +62,70 @@ $slow-fade: all 0.5s ease-in;
   pointer-events: none;
 }
 
+.start-screen-container {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $white;
+  z-index: 988;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: $fade;
+}
+
+.start-screen-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 380px;
+}
+
+.start-screen-title {
+  font-size: 77px;
+
+  .blue {
+    color: $blue;
+  }
+
+  .red {
+    color: $red;
+  }
+
+  .green {
+    color: $green;
+  }
+
+  .purple {
+    color: $purple;
+  }
+}
+
+.start-screen-text {
+  color: $black;
+  text-align: center;
+  margin: 10px 20px 30px;
+}
+
+.start-screen-btn {
+  color: $white;
+  font-weight: bold;
+  font-size: 15px;
+  padding: 13px 35px;
+  border: none;
+  background-color: $black;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.hide-start-screen {
+  pointer-events: none;
+  opacity: 0;
+}
+
 .app-container {
   width: 92%;
   max-width: 1150px;
