--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -909,6 +909,71 @@ $slow-fade: all 0.5s ease-in;
   text-align: center;
 }
 
+.flash-error-popup-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $black-see-through;
+  opacity: 0;
+  z-index: 20;
+  pointer-events: none;
+  overflow-y: scroll;
+  transition: $fade;
+}
+
+.flash-error-todo-popup {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.flash-error-popup-box {
+  width: 100%;
+  height: auto;
+  max-width: 450px;
+  background-color: $white;
+  border-radius: 15px;
+  z-index: 20;
+  border: 1px solid $grey;
+  box-shadow: 0 5px 15px -7px $black;
+  margin: 90px auto 90px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 50px 10px;
+}
+
+.flash-error-buttons-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.flash-error-buttons {
+  height: 40px;
+  width: 115px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.flash-error-button {
+  background-color: $black;
+  font-weight: bold;
+  font-size: 14px;
+  color: $white;
+}
+
+.flash-error-text {
+  color: $black;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 0 20px;
+  text-align: center;
+}
+
 /* Large devices */
 @media only screen and (max-width: 1199.98px) {
   /* ...code... */
@@ -1044,5 +1109,13 @@ $slow-fade: all 0.5s ease-in;
 
   .add-category-popup-box {
     padding: 25px 15px;
+  }
+
+  .flash-error-box {
+    padding: 10px 15px;
+  }
+
+  .flash-error-popup-box {
+    padding: 10px 15px;
   }
 }
