Change flickity to fade between options instead of side scroll

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -187,6 +187,7 @@ $slow-fade: all 0.5s ease-in;
   margin-bottom: 25px;
   display: flex;
   align-items: center;
+  width: auto;
 }
 
 .category-btn {
@@ -1013,10 +1014,20 @@ $slow-fade: all 0.5s ease-in;
 
   .flickity-prev-next-button:disabled { display: none; }
 
+  .flickity-button {
+    background: none;
+
+    &:hover {
+      background: none;
+    }
+  }
+
   .category {
+    width: 100%;
     margin: 10px 0;
     height: 40px;
     display: flex;
+    justify-content: center;
     align-items: center;
   }
 
