--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1015,6 +1015,7 @@ $slow-fade: all 0.5s ease-in;
     justify-content: center;
     align-items: center;
     position: absolute;
+    transition: transform 0.4s ease-in-out;
   }
 
   .categories-side-container {
