--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,6 +20,10 @@ $slow-fade: all 0.5s ease-in;
 
 /* XL devices (default) */
 
+main {
+  opacity: 0;
+}
+
 .loading-container {
   width: 100%;
   height: 100%;
